--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset="utf-8">
     <title>Pushwoosh_demo</title>
   </head>
+  <!-- Latest compiled and minified CSS & JS -->
+  <link rel="stylesheet" media="screen" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="bower_components/AdminLTE/dist/css/AdminLTE.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <body>
     <app></app>
     <script src="dist/build.js"></script>
+    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
+    <script src="bower_components/AdminLTE/dist/js/app.js"></script>
   </body>
 </html>
